devscripts (2.9.14) UNRELEASED; urgency=low

  * debchange: fall back on NAME envvar if DEBFULLNAME is not defined
    (Closes: #340292)

 -- Julian Gilbey <jdg@debian.org>  Sun, 12 Feb 2006 16:20:08 +0000

devscripts (2.9.13) unstable; urgency=low

  * Don't include .svn directory in md5sums (Closes: #352273)
  * bts: fix new caching code (thanks to Frank Lichtenheld for this one)
    (Closes: #352476)
  * bts: correctly handle DEBEMAIL='Name <email>' (Closes: #342883)
  * debcommit: handle commit messages for git-based setups (Closes:
    #352004)
  * uscan: check sanity of downloaded files (Closes: #303958)

 -- Julian Gilbey <jdg@debian.org>  Sun, 12 Feb 2006 12:46:22 +0000

devscripts (2.9.12) unstable; urgency=low

  [ Julian Gilbey ]
  * bts: show/bugs: update to recognise new URL formats in BTS pages
    (based on bug #349259)
  * bts: show/bugs: allow options with from:<submitter> etc. to work
    correctly (Closes: #345464)
  * bts: accept "submitter nnnnn !" format (Closes: #348349)
  * debchange: update to recognise new URL formats in BTS pages (Closes:
    #349259)
  * debchange: quitting the editor with -e option and no changes no longer
    modifies the changelog (Closes: #349091)
  * debuild: dpkg-buildpackage -> dpkg-buildpackage(1) in EXAMPLES section
    of manpage (Closes: #351363)
  * nmudiff: include in package (Closes: #349337)
  * nmudiff: improved old version code from Steinar using supplied patch
    (Closes: #351791)

  [ Joey Hess ]
  * Add rmadison program by Christoph Berg. Closes: #350335

  [ Nicolas François ]
  * Makefile
    build the man pages in the `all' rule
    remove the translated manpages and update the POT/POs in `clean'
  * po4a/add_fr/translator_french.add moved to po4a/fr/translator_man.add
    The addendum is moved to the language directory.
    It was renamed because a pod and dbk addendum will be added latter
  * po4a/devscripts.fr.po moved to po4a/po/fr.po, and updated