@@ -2,8 +2,11 @@ devscripts (2.9.14) UNRELEASED; urgency=low
 
   * debchange: fall back on NAME envvar if DEBFULLNAME is not defined
     (Closes: #340292)
+  * uscan: always pass --no-symlink to uupdate as uscan does the
+    symlinking itself (Closes: #345874)
+  * uscan: handle multi-word actions
 
- -- Julian Gilbey <jdg@debian.org>  Sun, 12 Feb 2006 16:20:08 +0000
+ -- Julian Gilbey <jdg@debian.org>  Mon, 13 Feb 2006 00:36:12 +0000
 
 devscripts (2.9.13) unstable; urgency=low
 
